@@ -1,3 +1,8 @@
+2006-12-21  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/30273
+	* gfortran.dg/dependency_19.f90: New test.
+
 2006-12-21  Steven G. Kargl  <kargl@gcc.gnu.org>
 
         PR fortran/30207
